homelab/collabora/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  namespace: collabora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collabora-code
  template:
    metadata:
      labels:
        app: collabora-code
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-home
      hostAliases:
        - ip: "192.168.1.245"
          hostnames:
            - office.k8s.hu.ls
      containers:
        - name: code
          image: docker.io/collabora/code:26.04.5.1.1@sha256:bb8f3c9c5c9016045f25fccb5f0649be94469ebc7c7cc379f3576e470cccf33d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9980
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /hosting/discovery
              port: 9980
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /hosting/discovery
              port: 9980
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
