homelab/collabora/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: collabora
spec:
  selector:
    app: collabora-code
  ports:
    - name: http
      port: 9980
      targetPort: 9980
