homelab/collabora/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  namespace: collabora
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - collabora.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
  rules:
    - host: collabora.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collabora
                port:
                  number: 9980
